attacker/cloud/host-cryptominer/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.0"
    }
  }
}

data "aws_ami" "ubuntu_focal" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

data "aws_ami" "amazon_linux" {
  owners = ["amazon"]
  most_recent = true

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*-x86_64-ebs"]
  }
}

locals {
    region          = var.region
    ami_map = {
        ubuntu_focal = data.aws_ami.ubuntu_focal.id
        amazon_linux = data.aws_ami.amazon_linux.id
    }
}

data "aws_caller_identity" "current" {}

resource "aws_vpc" "public" {
  cidr_block = "172.20.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support = true
  tags = {
    Name = "${var.name}-public-vpc"
  }
}

resource "aws_internet_gateway" "public" {
  vpc_id = aws_vpc.public.id

  tags = {
    Name = "${var.name}-public-internet-gw"
  }
}

resource "aws_subnet" "public" {
    vpc_id            = aws_vpc.public.id
    cidr_block        = "172.20.10.0/24"
    availability_zone = "us-east-1b"
    
    map_public_ip_on_launch = true
    
    tags = {
        Name = "${var.name}-public-subnet"
    }
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.public.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.public.id
    }

    tags = {
        Name = "${var.name}-default-public-internet-gw-route"
    }
}

resource "aws_route_table_association" "public" {
  subnet_id = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

resource "aws_security_group" "miner" {
  name   = "miner-sg"
  vpc_id = "${aws_vpc.public.id}"

  # SSH access needed for provisioner
#   ingress {
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

data "template_file" "user_data" {
  template = "${file("./resources/userdata.sh.tpl")}"

  vars = {
    wallet = "${var.wallet}"
    region = "${var.region}"
  }
}

data "template_file" "user_data_docker" {
  template = "${file("./resources/userdata_docker.sh.tpl")}"

  vars = {
    wallet = "${var.wallet}"
    region = "${var.region}"
  }
}

data "aws_iam_instance_profile" "ssm" {
  name = "ec2_profile"
}

resource "aws_instance" "miner" {
    count           = "${var.instances}"
    ami             = "ami-0d70b8dd4ec1e2d1e"
    instance_type   = "t2.micro"
    
    subnet_id = aws_subnet.public.id
    vpc_security_group_ids =    [
                                    "${aws_security_group.miner.id}"
                                ]

    # user_data_base64 = base64encode(data.template_file.user_data.rendered)
    user_data_base64 = base64encode(data.template_file.user_data_docker.rendered)
    
    associate_public_ip_address = true
    
    # borrowed from existing environment
    iam_instance_profile = data.aws_iam_instance_profile.ssm.name

    # leverage existing ssm deployment of lacework
    tags = {
        Name = "miner-${count.index}"
        ssm_deploy_lacework = "true"
    }

    user_data_replace_on_change = true
}
